# fetch-sdet-challenge

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
fetch_sdet_challenge/: driver.py  entry_point.py
tests/: test_fetch_sdet_challenge.py  test_requirements_from_part_2.py
